<resources>
    <string name="app_name">SkyllSync</string>
    <string name="about_menu">About</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Log in</string>
    <string name="signup">Register</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">New Category Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="flows">Flows</string>
    <string name="poses">Poses</string>
    <string name="whips">Whips</string>
    <string name="pops">Pops</string>
    <string name="add_skill">Add Skill</string>
    <string name="skill_name">Skill Name</string>
    <string name="current_user">CURRENT USER</string>
    <string name="current_category">CURRENT CATEGORY</string>
    <string name="priority_level">Priority Level</string>
    <string name="progression_name">Progression Name</string>
    <string name="add_skill_picture">Add picture or video to skill</string>
    <string name="delete_category">Do you want to delete the category ?</string>
    <string name="delete">delete</string>
    <string name="delete_skill">Do you want to delete this skill ?</string>
    <string name="pair_up">Pair Up:</string>
    <string name="partner">No partner</string>
    <string name="pair_up_button">Pair Up !</string>
    <string name="PairUpUsernameHint">Username of Pair Up partner</string>
    <string name="pair_up_response_message">Do you want to Pair Up for this skill ?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="sort">Name</string>
    <string name="instagram_link">Add Instagram Link</string>
    <string name="instagram_link_hint">paste instagram link here</string>
    <string name="my_profile">My Profile</string>
    <string name="categoriesMenuItem">Catalogue</string>
    <string name="myprofileTextView">MyUserProfile</string>
    <string name="msg_no_uri">No photo to send to smartwatch</string>
    <string name="image_sent_to_sw">Image sent</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="training_stats">Training stats</string>
    <string name="logoutButton">Log out</string>
    <string name="imageDescriptionTextView">click on profile picture to modify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This is a project created by:\nBarbara De Groot and Ismael Frei\n\nIt is an app for AcroYogis to keep track of their progress by creating a catalogue of skills that they mastered or still want to learn.\n\nThis project is part of the EPFL course EE-490(g):\nLab on app development for tablets and smartphones\n\nProfessor: Giovanni Ansaloni\nTAs: Rafael Medina Morillas and Amirhossein Shahbazinia</string>
    <string name="aboutTitleText">About</string>
    <string name="delete_training">Do you want to delete this training ?</string>
    <string name="your_trainings">Your trainings :</string>
    <string name="training_stats_title">Training stats</string>
</resources>