<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrainingStatsFragment">

    <TextView
        android:id="@+id/trainingStatsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="40sp"
        android:text="@string/training_stats_title"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/HRProgressBarLayout"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_margin="10dp"
            android:layout_gravity="center">

            <ProgressBar
                android:id = "@+id/HRProgressBar"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/circle_progress_bar"
                android:indeterminate="false"
                android:progress="50"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/HRText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:text="@string/heart_rate"
                android:fontFamily="@font/poppins_light"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                />

        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/HRPlot"
            android:layout_height="150dp"
            android:layout_width = "match_parent"
            android:background="@color/design_default_color_background">
        </com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>

    <TextView
        android:id="@+id/yourTrainings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:text="@string/your_trainings"
        android:fontFamily="@font/poppins_light"
        android:textStyle="bold"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".TrainingStatsFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshTrainingStats"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trainingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:padding="5dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_training_row" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <LinearLayout
        android:id="@+id/deleteTrainingWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:background="@color/design_default_color_background"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/delete_training"
            android:textAlignment="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancelDeleteTrainingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/confirmDeleteTrainingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    </FrameLayout>

</LinearLayout>